# watcher

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  preload.js  renderer.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connection.rs  constants.rs  docker.rs  events.rs  lib.rs  main.rs  state.rs  structs.rs  ui.rs  updater.rs
src-tauri/utils/: champions.json  summoner_spells.json
