[package]
name = "watcher"
version = "3.3.0"
description = "A League of Legends Champion Select Automation Tool"
authors = ["TacticalDeux <tacticaldeux1@gmail.com>"]
license = "MIT"
repository = "https://github.com/tacticaldeux/watcher-tauri"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-utils = "2.7.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
irelia = "0.11"
anyhow = "1.0"
semver = "1.0"
reqwest = { version = "0.12", features = ["json"] }

hyper = { version = "1.0", optional = true }
hyper-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.27", optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1.0", optional = true }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

# Win32 window inspection used by the "Dock to League Client" overlay feature:
# finding the League client's window by process ID and reading its rect/state.
# 0.59 is already compiled transitively (tauri pulls windows-sys), so this adds
# no new download.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
advanced-http = [
    "hyper",
    "hyper-util",
    "hyper-rustls",
    "http-body-util",
    "bytes",
]
